// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dropdown list matches the snapshot (disabled) 1`] = `
.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c9 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover {
  background-color: #DBDEE1;
}

.c10::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c8 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #B7BBC2;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-expanded="true"
    aria-invalid="false"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c4"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c5"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      data-testid="arrow"
      focusable="false"
      height="16"
      width="16"
    />
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c7 c8 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c9"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Alberta
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Ontario
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Quebec
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c11 react-datepicker-ignore-onclickoutside"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (icon) 1`] = `
.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c9 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c11 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c10 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c5:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

.c6 {
  color: #60666E;
  margin-right: var(--spacing-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <span
    class="c4"
    id="uuid1_hint"
  >
    Hint
  </span>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-describedby="uuid1_hint"
    aria-expanded="true"
    aria-invalid="false"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c5"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="c6"
      color="currentColor"
      data-testid="textbox-icon"
      focusable="false"
      height="16"
      width="16"
    />
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c7"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="c8"
      color="currentColor"
      data-testid="arrow"
      focusable="false"
      height="16"
      width="16"
    />
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c9 c10 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c11"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Alberta
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Ontario
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Quebec
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (invalid) 1`] = `
.c4 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c9 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c11 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c10 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c6:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <span
    class="c4"
    data-testid="invalid-field"
    id="uuid1_invalid"
  >
    <svg
      class="c5"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
    You must select an option
  </span>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-describedby="uuid1_invalid"
    aria-expanded="true"
    aria-invalid="true"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c6"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c7"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="c8"
      color="currentColor"
      data-testid="arrow"
      focusable="false"
      height="16"
      width="16"
    />
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c9 c10 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c11"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c12 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Alberta
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Ontario
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Quebec
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c14 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c13 react-datepicker-ignore-onclickoutside"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (mobile) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c7 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10:hover {
  background-color: #DBDEE1;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c6 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2halfx);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-expanded="true"
    aria-invalid="false"
    aria-label="Select an option"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c2"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c3"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="c4"
      color="currentColor"
      data-testid="arrow"
      focusable="false"
      height="24"
      width="24"
    />
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c5 c6 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c7"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Alberta
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Ontario
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Quebec
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c10 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c9 react-datepicker-ignore-onclickoutside"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot (multiselect) 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c7 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c11 {
  color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c9:hover {
  background-color: #DBDEE1;
  border: 1px solid #000000;
}

.c9 > .c10 {
  display: none;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c6 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x) 0 0;
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c2:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <div
    aria-controls="uuid1_listbox"
    aria-expanded="true"
    aria-invalid="false"
    aria-label="Select an option"
    aria-labelledby="uuid1_label"
    aria-readonly="false"
    aria-required="false"
    class="c2"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value=""
    />
    <div
      class="c3"
      data-testid="tag-wrapper"
    />
    <svg
      aria-hidden="true"
      class="c4"
      color="currentColor"
      data-testid="arrow"
      focusable="false"
      height="16"
      width="16"
    />
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-labelledby="uuid1_label"
      aria-multiselectable="true"
      class="c5 c6 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c7"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Alberta
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Ontario
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Quebec
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c8 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            aria-hidden="true"
            class="c9"
          >
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown list matches the snapshot 1`] = `
.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c8 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c10 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c11::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  width: 4px;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  padding-right: var(--spacing-1x);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:hover {
  background-color: #DBDEE1;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  position: relative;
}

.c9 {
  left: 0px;
  position: absolute;
  top: 0px;
  z-index: 99998;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1x);
  text-wrap: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
}

.c5:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  height: var(--size-1x);
  margin-left: auto;
  padding: var(--spacing-half);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    Select an option
  </label>
  <span
    class="c4"
    id="uuid1_hint"
  >
    Hint
  </span>
  <div
    aria-activedescendant="uuid1_ab"
    aria-controls="uuid1_listbox"
    aria-describedby="uuid1_hint"
    aria-expanded="true"
    aria-invalid="false"
    aria-labelledby="uuid1_label uuid1_listbox_ab_label"
    aria-readonly="false"
    aria-required="false"
    class="c5"
    data-testid="textbox"
    id="uuid1"
    role="combobox"
    tabindex="0"
  >
    <input
      data-testid="input"
      type="hidden"
      value="ab"
    />
    <span
      class="c6"
    >
      Alberta
    </span>
    <svg
      aria-hidden="true"
      class="c7"
      color="currentColor"
      data-testid="arrow"
      focusable="false"
      height="16"
      width="16"
    />
  </div>
  <div
    data-testid="mock-portal"
  >
    <div
      aria-activedescendant="uuid1_listbox_ab"
      aria-labelledby="uuid1_label"
      class="c8 c9 react-datepicker-ignore-onclickoutside"
      data-testid="listbox-container"
      id="uuid1_listbox"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c10"
        data-testid="listbox-list"
        role="presentation"
      >
        <li
          aria-selected="true"
          class="c11 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ab"
          id="uuid1_listbox_ab"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Alberta
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-bc"
          id="uuid1_listbox_bc"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            British Columbia
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-mb"
          id="uuid1_listbox_mb"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Manitoba
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nb"
          id="uuid1_listbox_nb"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            New Brunswick
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nl"
          id="uuid1_listbox_nl"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Newfoundland and Labrador
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nt"
          id="uuid1_listbox_nt"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Northwest Territories
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-ns"
          id="uuid1_listbox_ns"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Nova Scotia
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-nu"
          id="uuid1_listbox_nu"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Nunavut
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-on"
          id="uuid1_listbox_on"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Ontario
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-pe"
          id="uuid1_listbox_pe"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Prince Edward Island
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-qc"
          id="uuid1_listbox_qc"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Quebec
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-sk"
          id="uuid1_listbox_sk"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Saskatchewan
          </span>
        </li>
        <li
          class="c13 react-datepicker-ignore-onclickoutside"
          data-testid="listitem-yt"
          id="uuid1_listbox_yt"
          role="option"
        >
          <span
            class="c12 react-datepicker-ignore-onclickoutside"
          >
            Yukon
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
